# CAP5.0

./: .gitignore  README.md  SetupCAP.sh  SetupHomeCap.sh  SetupPythiaLinks.sh
src/: CMakeLists.txt
src/Ampt/: AmptEventReader.cpp  AmptEventReader.hpp  AmptLinkDef.h  CMakeLists.txt
src/Base/: Aliases.hpp  BaseLinkDef.h  BidimGaussFitConfiguration.cpp  BidimGaussFitConfiguration.hpp  BidimGaussFitResult.cpp  BidimGaussFitResult.hpp  BidimGaussFitter.cpp  BidimGaussFitter.hpp  CMakeLists.txt  CmdlineAnalyzer.cpp  CmdlineAnalyzer.hpp  Collection.hpp  Configuration.cpp  Configuration.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  Crc32.cpp  Crc32.hpp  DerivedHistoIterator.cpp  DerivedHistoIterator.hpp  Exceptions.cpp  Exceptions.hpp  Factory.cpp  Factory.hpp  FileTaskIterator.cpp  FileTaskIterator.hpp  Filter.hpp  HistogramCollection.cpp  HistogramCollection.hpp  HistogramGroup.cpp  HistogramGroup.hpp  HistogramManager.cpp  HistogramManager.hpp  IdentifiedObject.cpp  IdentifiedObject.hpp  MessageLogger.cpp  MessageLogger.hpp  NameManager.cpp  NameManager.hpp  OldConfigurationClass.cpp  (+32 more)
src/BasicGen/: BasicGenLinkDef.h  CMakeLists.txt  GaussianGeneratorTask.cpp  GaussianGeneratorTask.hpp  RadialBoostHistos.cpp  RadialBoostHistos.hpp  RadialBoostTask.cpp  RadialBoostTask.hpp  RapidityGenerator.cpp  RapidityGenerator.hpp  ResonanceGenerator.cpp  ResonanceGenerator.hpp
src/CAPPythia/: CAPPythiaLinkDef.h  CMakeLists.txt  PythiaEventGenerator.cpp  PythiaEventGenerator.hpp  PythiaEventReader.cpp  PythiaEventReader.hpp
src/Closure/: CMakeLists.txt  SubSampleStatCalculator.cpp  SubSampleStatCalculator.hpp
src/CollGeom/: AACollisionGenerator.cpp  AACollisionGenerator.hpp  CMakeLists.txt  CollGeomLinkDef.h  CollisionGeometry.cpp  CollisionGeometry.hpp  CollisionGeometryAnalyzer.cpp  CollisionGeometryAnalyzer.hpp  CollisionGeometryGenerator.cpp  CollisionGeometryGenerator.hpp  CollisionGeometryGradientHistograms.cpp  CollisionGeometryGradientHistograms.hpp  CollisionGeometryHistograms.cpp  CollisionGeometryHistograms.hpp  CollisionGeometryMoments.cpp  CollisionGeometryMoments.hpp  NucleonNucleonCollisionGenerator.cpp  NucleonNucleonCollisionGenerator.hpp  NucleusGenerator.cpp  NucleusGenerator.hpp
src/Epos/: CMakeLists.txt  EposEventReader.cpp  EposEventReader.hpp  EposLinkDef.h
src/Exec/: CMakeLists.txt  ExecLinkDef.h  RunAnalysis.cpp  RunAnalysis.hpp  RunDerivedCalculation.cpp  RunSubsample.cpp
src/Garbage/: RunDerivedCalculation.hpp  RunSubsample.cpp  RunSubsample.hpp
src/Global/: CMakeLists.txt  GlobalAnalyzer.cpp  GlobalAnalyzer.hpp  GlobalDerivedHistos.cpp  GlobalDerivedHistos.hpp  GlobalHistos.cpp  GlobalHistos.hpp  GlobalLinkDef.h  TransverseSpherocityAnalyzer.cpp  TransverseSpherocityAnalyzer.hpp  TransverseSpherocityHistos.cpp  TransverseSpherocityHistos.hpp
src/Hijing/: CMakeLists.txt  HijingEventReader.cpp  HijingEventReader.hpp  HijingLinkDef.h
src/Identity/: CMakeLists.txt  IdentityAnalyzer.cpp  IdentityAnalyzer.hpp  IdentityLinkDef.h  LineShape.cpp  LineShape.hpp  RunId.C
src/Macros/: BfStudies.C  CalculateBSlices.C  CalculateDerivedHistogram.C  CalculateQ.C  CalculateXsectSlices.C  CollisionGeometryPlots.C  CrossMomentCalculator.C  CrossMomentCalculator_C.d  CrossMomentCalculator_C_ACLiC_dict_rdict.pcm  DataGenPhy7850.C  DeviatesCalculator.C  G2Width.C  GridMerge.C  MomentCalculator.C  MomentCalculator_C.d  MomentCalculator_C_ACLiC_dict_rdict.pcm  MomentMethodKeep.C  PermutationGenerator.C  PlotBF.C  PlotBFBaryons.C  PlotBFBaryons_version2.C  PlotBFBaryons_version3.C  PlotBFPiKP-Save.C  PlotBFPiKP.C  PlotBFPiKP_version2.C  PlotBFSets.C  PlotBF_version3.C  PlotBFvsMult.C  PlotCompBF.C  PlotCompBF2 (original).C  PlotCompBF2.C  PlotEfficiencyModel.C  PlotHGPtSpectraVsData.C  PlotHepData.C  PlotPBF.C  PlotPerformance.C  PlotPythiaBF.C  PlotPythiaBFvsS.C  PlotPythiaClosure.C  PlotPythiaDensities.C  (+49 more)
src/Math/: BesselFunctions.cpp  BesselFunctions.hpp  CMakeLists.txt  Complex.cpp  Complex.hpp  MathBasicFunctions.cpp  MathBasicFunctions.hpp  MathBasicGeometry.cpp  MathBasicGeometry.hpp  MathBasicIntegration.cpp  MathBasicIntegration.hpp  MathBasicInterpolation.cpp  MathBasicInterpolation.hpp  MathBasicSearch.cpp  MathBasicSearch.hpp  MathBasicSortingFunctions.cpp  MathBasicSortingFunctions.hpp  MathBasicStatistics.cpp  MathBasicStatistics.hpp  MathConstants.cpp  MathConstants.hpp  MathLinkDef.h  Pdf.cpp  Pdf.hpp  RobustMoments.hpp  Vector3.cpp  Vector3.hpp  VectorLorentz.cpp  VectorLorentz.hpp  test.C
src/NuDyn/: CMakeLists.txt  NuDynAnalyzer.cpp  NuDynAnalyzer.hpp  NuDynDerivedHistos.cpp  NuDynDerivedHistos.hpp  NuDynHistos.cpp  NuDynHistos.hpp  NuDynLinkDef.h  NuDynPlotter.cpp  NuDynPlotter.hpp
src/ParticlePair/: BalanceFunctionCalculator.cpp  BalanceFunctionCalculator.hpp  CMakeLists.txt  ParticlePair3DAnalyzer.cpp  ParticlePair3DAnalyzer.hpp  ParticlePair3DDerivedHistogramCalculator.cpp  ParticlePair3DDerivedHistogramCalculator.hpp  ParticlePair3DDerivedHistos.cpp  ParticlePair3DDerivedHistos.hpp  ParticlePair3DHistos.cpp  ParticlePair3DHistos.hpp  ParticlePairAnalyzer.cpp  ParticlePairAnalyzer.hpp  ParticlePairDerivedHistos.cpp  ParticlePairDerivedHistos.hpp  ParticlePairHistos.cpp  ParticlePairHistos.hpp  ParticlePairLinkDef.h
src/ParticleSingle/: CMakeLists.txt  ParticleSingleAnalyzer.cpp  ParticleSingleAnalyzer.hpp  ParticleSingleDerivedHistos.cpp  ParticleSingleDerivedHistos.hpp  ParticleSingleHistos.cpp  ParticleSingleHistos.hpp  ParticleSingleLinkDef.h
src/Particles/: CMakeLists.txt  CalibrationManager.cpp  CalibrationManager.hpp  Event.cpp  Event.hpp  EventCountHistos.cpp  EventCountHistos.hpp  EventFilter.cpp  EventFilter.hpp  EventFilterAliceV0.cpp  EventFilterAliceV0.hpp  EventProperties.cpp  EventProperties.hpp  EventTask.cpp  EventTask.hpp  FilterCreator.cpp  FilterCreator.hpp  ModelManager.cpp  ModelManager.hpp  MomentumGenerator.cpp  MomentumGenerator.hpp  Nucleus.cpp  Nucleus.hpp  NucleusType.cpp  NucleusType.hpp  Particle.cpp  Particle.hpp  ParticleDb.cpp  ParticleDb.hpp  ParticleDbManager.cpp  ParticleDbManager.hpp  (+25 more)
(+254 files in other folders)
